@@ -87,15 +87,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  * mod_log_config: Make ${cookie}C correctly match whole cookie names
-    instead of substrings.
-    PR: 28037
-    Trunk patch: http://svn.apache.org/viewvc?rev=833738&view=rev
-                 http://svn.apache.org/viewvc?rev=834006&view=rev
-                 http://svn.apache.org/viewvc?rev=834013&view=rev
-                 http://svn.apache.org/viewvc?rev=834500&view=rev
-    2.2.x patch: http://people.apache.org/~sf/log_cookie_28037.diff
-    +1: sf, jim, rpluem
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
